[package]
name = "opendeck"
version = "2.0.0"
description = "A cross-platform desktop application for ProntoKey and Stream Deck."
authors = [ "ninjadev64" ]
license = "GPL-3.0-or-later"
repository = "https://github.com/ninjadev64/OpenDeck"
default-run = "opendeck"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }
built = { version = "0.7", features = [ "dependency-tree", "git2" ] }

[dependencies]
# Large, fundamental libraries
tauri = { version = "2.0.0-rc", features = [ "devtools" , "tray-icon"] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
serialport = "4.5"
tokio = { version = "1.38", features = [ "full" ] }
tokio-tungstenite = "0.24"
tiny_http = "0.12"
elgato-streamdeck = { version = "0.7", default-features = false, features = [ "async" ] }
hidapi = { version = "2.6", default-features = false, features = [ "linux-static-hidraw", "macos-shared-device", "windows-native" ] }
image = { version = "0.25", default-features = false, features = [ "bmp", "jpeg" ] }
# Smaller utility libraries
once_cell = "1.19"
futures-util = "0.3"
anyhow = "1.0"
log = "0.4"
log-panics = "2.1"
tauri-plugin-shell = { version = "2.0.0-rc" }
tauri-plugin-dialog = { version = "2.0.0-rc" }
tauri-plugin-log = { version = "2.0.0-rc" }
tauri-plugin-single-instance = { version = "2.0.0-rc" }
tauri-plugin-autostart = { version = "2.0.0-rc" }
serde-inline-default = "0.2"
serde_with = "3.9"
os_info = "3.8"
urlencoding = "2.1"
base64 = "0.22"
reqwest = "0.12"
zip = { version = "2.2", default-features = false, features = [ "deflate", "zstd" ] }

[features]
custom-protocol = [ "tauri/custom-protocol" ]
